Fix issue where navbar dropdowns weren't visible in dashboard view.

--- a/app/assets/stylesheets/vault_navbar.scss
+++ b/app/assets/stylesheets/vault_navbar.scss
@@ -281,5 +281,5 @@ body.dashboard {
 
 body.dashboard.vault-dashboard {
     padding-top: 0;
-    background-color: transparent;
+    overflow-x: unset;
 }
